refactor: update aside menu

--- a/src/colors.html
+++ b/src/colors.html
@@ -1,6 +1,6 @@
 <!--
 * CoreUI - Free Bootstrap Admin Template
-* @version v2.0.0-beta.0
+* @version v2.0.0-beta.1
 * @link https://coreui.io
 * Copyright (c) 2018 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
@@ -341,52 +341,36 @@
               <div class="card-body">
                 <div class="row">
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-primary w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-primary theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Brand Primary Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#20a8d8</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-secondary w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-secondary theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Brand Secondary Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#a4b7c1</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-success w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-success theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Brand Success Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#4dbd74</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-danger w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-danger theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Brand Danger Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#f86c6b</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-warning w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-warning theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Brand Warning Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#ffc107</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-info w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-info theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Brand Info Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#63c2de</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-light w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-light theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Brand Light Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#f0f3f5</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-dark w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-dark theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Brand Dark Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#29363d</strong>
                   </div>
                 </div>
               </div>
@@ -398,58 +382,40 @@
               <div class="card-body">
                 <div class="row mb-3">
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-gray-100 w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-gray-100 theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Gray 100 Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#f0f3f</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-gray-200 w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-gray-200 theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Gray 200 Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#c2cfd6</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-gray-300 w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-gray-300 theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Gray 300 Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#a4b7c1</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-gray-400 w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-gray-400 theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Gray 400 Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#869fac</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-gray-500 w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-gray-500 theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Gray 500 Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#678898</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-gray-600 w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-gray-600 theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Gray 600 Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#536c79</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-gray-700 w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-gray-700 theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Gray 700 Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#3e515b</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-gray-800 w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-gray-800 theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Gray 800 Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#29363d</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="bg-gray-900 w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="bg-gray-900 theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Gray 900 Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#151b1e</strong>
                   </div>
                 </div>
               </div>
@@ -461,70 +427,48 @@
               <div class="card-body">
                 <div class="row">
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="mb-3 bg-blue w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="mb-3 bg-blue theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Blue Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#20a8d8</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="mb-3 bg-light-blue w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="mb-3 bg-light-blue theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Light Blue Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#63c2de</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="mb-3 bg-indigo w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="mb-3 bg-indigo theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Indigo Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#6610f2</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="mb-3 bg-purple w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="mb-3 bg-purple theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Purple Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#6f42c1</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="mb-3 bg-pink w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="mb-3 bg-pink theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Pink Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#e83e8c</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="mb-3 bg-red w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="mb-3 bg-red theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Red Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#f86c6b</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="mb-3 bg-orange w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="mb-3 bg-orange theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Orange Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#f8cb00</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="mb-3 bg-yellow w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="mb-3 bg-yellow theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Yellow Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#ffc107</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="mb-3 bg-green w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="mb-3 bg-green theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Green Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#4dbd74</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="mb-3 bg-teal w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="mb-3 bg-teal theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Teal Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#20c997</strong>
                   </div>
                   <div class="col-xl-2 col-md-3 col-sm-4 col-6 mb-4">
-                    <div class="mb-3 bg-cyan w-75 rounded mb-2" style="padding-top:75%"></div>
+                    <div class="mb-3 bg-cyan theme-color w-75 rounded mb-2" style="padding-top:75%"></div>
                     <h6>Cyan Color</h6>
-                    <span class="text-muted">HEX:</span>
-                    <strong>#17a2b8</strong>
                   </div>
                 </div>
               </div>
@@ -553,14 +497,10 @@
         </ul>
         <!-- Tab panes-->
         <div class="tab-content">
-          <div class="tab-pane active" id="timeline" role="tabpanel">
-            <div class="callout m-0 py-2 text-muted text-center bg-light text-uppercase">
-              <small>
-                <b>Today</b>
-              </small>
-            </div>
-            <hr class="transparent mx-3 my-0">
-            <div class="callout callout-warning m-0 py-3">
+          <div class="tab-pane active" id="timeline" role="tabpanel"></div>
+          <div class="list-group list-group-accent">
+            <div class="list-group-item list-group-item-accent-secondary bg-light text-center font-weight-bold text-muted text-uppercase small">Today</div>
+            <div class="list-group-item list-group-item-accent-warning list-group-item-divider">
               <div class="avatar float-right">
                 <img class="img-avatar" src="img/avatars/7.jpg" alt="admin@bootstrapmaster.com">
               </div>
@@ -572,8 +512,7 @@
               <small class="text-muted">
                 <i class="icon-location-pin"></i>  Palo Alto, CA</small>
             </div>
-            <hr class="mx-3 my-0">
-            <div class="callout callout-info m-0 py-3">
+            <div class="list-group-item list-group-item-accent-info">
               <div class="avatar float-right">
                 <img class="img-avatar" src="img/avatars/4.jpg" alt="admin@bootstrapmaster.com">
               </div>
@@ -585,14 +524,8 @@
               <small class="text-muted">
                 <i class="icon-social-skype"></i>  On-line</small>
             </div>
-            <hr class="transparent mx-3 my-0">
-            <div class="callout m-0 py-2 text-muted text-center bg-light text-uppercase">
-              <small>
-                <b>Tomorrow</b>
-              </small>
-            </div>
-            <hr class="transparent mx-3 my-0">
-            <div class="callout callout-danger m-0 py-3">
+            <div class="list-group-item list-group-item-accent-secondary bg-light text-center font-weight-bold text-muted text-uppercase small">Tomorrow</div>
+            <div class="list-group-item list-group-item-accent-danger list-group-item-divider">
               <div>New UI Project -
                 <strong>deadline</strong>
               </div>
@@ -618,8 +551,7 @@
                 </div>
               </div>
             </div>
-            <hr class="mx-3 my-0">
-            <div class="callout callout-success m-0 py-3">
+            <div class="list-group-item list-group-item-accent-success list-group-item-divider">
               <div>
                 <strong>#10 Startups.Garden</strong> Meetup</div>
               <small class="text-muted mr-3">
@@ -627,8 +559,7 @@
               <small class="text-muted">
                 <i class="icon-location-pin"></i>  Palo Alto, CA</small>
             </div>
-            <hr class="mx-3 my-0">
-            <div class="callout callout-primary m-0 py-3">
+            <div class="list-group-item list-group-item-accent-primary list-group-item-divider">
               <div>
                 <strong>Team meeting</strong>
               </div>
@@ -660,7 +591,6 @@
                 </div>
               </div>
             </div>
-            <hr class="mx-3 my-0">
           </div>
           <div class="tab-pane p-3" id="messages" role="tabpanel">
             <div class="message">
@@ -853,5 +783,7 @@
     <script src="node_modules/pace-progress/pace.min.js"></script>
     <script src="node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js"></script>
     <script src="node_modules/@coreui/coreui/dist/js/coreui.min.js"></script>
+    <!-- Plugins and scripts required by this view-->
+    <script src="js/colors.js"></script>
   </body>
 </html>
