--- a/src/notifications-modals.html
+++ b/src/notifications-modals.html
@@ -1,6 +1,6 @@
 <!--
 * CoreUI - Free Bootstrap Admin Template
-* @version v2.0.0-beta.0
+* @version v2.0.0-beta.1
 * @link https://coreui.io
 * Copyright (c) 2018 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
@@ -581,14 +581,10 @@
         </ul>
         <!-- Tab panes-->
         <div class="tab-content">
-          <div class="tab-pane active" id="timeline" role="tabpanel">
-            <div class="callout m-0 py-2 text-muted text-center bg-light text-uppercase">
-              <small>
-                <b>Today</b>
-              </small>
-            </div>
-            <hr class="transparent mx-3 my-0">
-            <div class="callout callout-warning m-0 py-3">
+          <div class="tab-pane active" id="timeline" role="tabpanel"></div>
+          <div class="list-group list-group-accent">
+            <div class="list-group-item list-group-item-accent-secondary bg-light text-center font-weight-bold text-muted text-uppercase small">Today</div>
+            <div class="list-group-item list-group-item-accent-warning list-group-item-divider">
               <div class="avatar float-right">
                 <img class="img-avatar" src="img/avatars/7.jpg" alt="admin@bootstrapmaster.com">
               </div>
@@ -600,8 +596,7 @@
               <small class="text-muted">
                 <i class="icon-location-pin"></i>  Palo Alto, CA</small>
             </div>
-            <hr class="mx-3 my-0">
-            <div class="callout callout-info m-0 py-3">
+            <div class="list-group-item list-group-item-accent-info">
               <div class="avatar float-right">
                 <img class="img-avatar" src="img/avatars/4.jpg" alt="admin@bootstrapmaster.com">
               </div>
@@ -613,14 +608,8 @@
               <small class="text-muted">
                 <i class="icon-social-skype"></i>  On-line</small>
             </div>
-            <hr class="transparent mx-3 my-0">
-            <div class="callout m-0 py-2 text-muted text-center bg-light text-uppercase">
-              <small>
-                <b>Tomorrow</b>
-              </small>
-            </div>
-            <hr class="transparent mx-3 my-0">
-            <div class="callout callout-danger m-0 py-3">
+            <div class="list-group-item list-group-item-accent-secondary bg-light text-center font-weight-bold text-muted text-uppercase small">Tomorrow</div>
+            <div class="list-group-item list-group-item-accent-danger list-group-item-divider">
               <div>New UI Project -
                 <strong>deadline</strong>
               </div>
@@ -646,8 +635,7 @@
                 </div>
               </div>
             </div>
-            <hr class="mx-3 my-0">
-            <div class="callout callout-success m-0 py-3">
+            <div class="list-group-item list-group-item-accent-success list-group-item-divider">
               <div>
                 <strong>#10 Startups.Garden</strong> Meetup</div>
               <small class="text-muted mr-3">
@@ -655,8 +643,7 @@
               <small class="text-muted">
                 <i class="icon-location-pin"></i>  Palo Alto, CA</small>
             </div>
-            <hr class="mx-3 my-0">
-            <div class="callout callout-primary m-0 py-3">
+            <div class="list-group-item list-group-item-accent-primary list-group-item-divider">
               <div>
                 <strong>Team meeting</strong>
               </div>
@@ -688,7 +675,6 @@
                 </div>
               </div>
             </div>
-            <hr class="mx-3 my-0">
           </div>
           <div class="tab-pane p-3" id="messages" role="tabpanel">
             <div class="message">
