--- a/src/widgets.html
+++ b/src/widgets.html
@@ -1,6 +1,6 @@
 <!--
 * CoreUI - Free Bootstrap Admin Template
-* @version v2.0.0-beta.0
+* @version v2.0.0-beta.1
 * @link https://coreui.io
 * Copyright (c) 2018 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
@@ -421,93 +421,6 @@
 
             <div class="row">
               <div class="col-sm-6 col-lg-3">
-                <div class="card bg-primary">
-                  <div class="card-header">
-                    <div class="font-weight-bold d-flex justify-content-between">
-                      <span class="text-uppercase">Sale</span>
-                      <span>$1.890,65</span>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                      <small>Today 6:43 AM</small>
-                      <small>+432,50 (15,78%)</small>
-                    </div>
-                    <div class="chart-wrapper" style="height:38px;">
-                      <canvas class="chart-7 chart chart-line" height="38"></canvas>
-                    </div>
-                    <div class="chart-wrapper" style="height:38px;">
-                      <canvas class="chart-8 chart chart-bar" height="38"></canvas>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-6 col-lg-3">
-                <div class="card bg-danger">
-                  <div class="card-header">
-                    <div class="font-weight-bold d-flex justify-content-between">
-                      <span class="text-uppercase">Sale</span>
-                      <span>$1.890,65</span>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                      <small>Today 6:43 AM</small>
-                      <small>+432,50 (15,78%)</small>
-                    </div>
-                    <div class="chart-wrapper" style="height:38px;">
-                      <canvas class="chart-7-2 chart chart-line" height="38"></canvas>
-                    </div>
-                    <div class="chart-wrapper" style="height:38px;">
-                      <canvas class="chart-8-2 chart chart-bar" height="38"></canvas>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!--/.col-->
-              <div class="col-sm-6 col-lg-3">
-                <div class="card bg-success">
-                  <div class="card-header">
-                    <div class="font-weight-bold d-flex justify-content-between">
-                      <span class="text-uppercase">Sale</span>
-                      <span>$1.890,65</span>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                      <small>Today 6:43 AM</small>
-                      <small>+432,50 (15,78%)</small>
-                    </div>
-                    <div class="chart-wrapper" style="height:38px;">
-                      <canvas class="chart-7-3 chart chart-line" height="38"></canvas>
-                    </div>
-                    <div class="chart-wrapper" style="height:38px;">
-                      <canvas class="chart-8-3 chart chart-bar" height="38"></canvas>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!--/.col-->
-              <div class="col-sm-6 col-lg-3">
-                <div class="card bg-warning">
-                  <div class="card-header">
-                    <div class="font-weight-bold d-flex justify-content-between">
-                      <span class="text-uppercase">Sale</span>
-                      <span>$1.890,65</span>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                      <small>Today 6:43 AM</small>
-                      <small>+432,50 (15,78%)</small>
-                    </div>
-                    <div class="chart-wrapper" style="height:38px;">
-                      <canvas class="chart-7-4 chart chart-line" height="38"></canvas>
-                    </div>
-                    <div class="chart-wrapper" style="height:38px;">
-                      <canvas class="chart-8-4 chart chart-bar" height="38"></canvas>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!--/.col-->
-            </div>
-            <!--/.row-->
-
-            <div class="row">
-              <div class="col-sm-6 col-lg-3">
                 <div class="card">
                   <div class="card-body">
                     <div class="text-value">89.9%</div>
@@ -625,7 +538,7 @@
                     <div class="text-muted small text-uppercase font-weight-bold">Title</div>
                     <div class="text-value-lg py-3">1,123</div>
                     <div class="chart-wrapper mx-auto" style="height:40px;width:80px">
-                      <canvas id="chart-1" class="chart chart-bar" height="40" width="80"></canvas>
+                      <canvas id="sparkline-chart-1" class="chart chart-bar" height="40" width="80"></canvas>
                     </div>
                   </div>
                 </div>
@@ -637,7 +550,7 @@
                     <div class="text-muted small text-uppercase font-weight-bold">Title</div>
                     <div class="text-value-lg py-3">1,123</div>
                     <div class="chart-wrapper mx-auto" style="height:40px;width:80px">
-                      <canvas id="chart-2" class="chart chart-bar" height="40" width="80"></canvas>
+                      <canvas id="sparkline-chart-2" class="chart chart-bar" height="40" width="80"></canvas>
                     </div>
                   </div>
                 </div>
@@ -649,7 +562,7 @@
                     <div class="text-muted small text-uppercase font-weight-bold">Title</div>
                     <div class="text-value-lg py-3">1,123</div>
                     <div class="chart-wrapper mx-auto" style="height:40px;width:80px">
-                      <canvas id="chart-3" class="chart chart-bar" height="40" width="80"></canvas>
+                      <canvas id="sparkline-chart-3" class="chart chart-bar" height="40" width="80"></canvas>
                     </div>
                   </div>
                 </div>
@@ -661,7 +574,7 @@
                     <div class="text-muted small text-uppercase font-weight-bold">Title</div>
                     <div class="text-value-lg py-3">1,123</div>
                     <div class="chart-wrapper mx-auto" style="height:40px;width:80px">
-                      <canvas id="chart-4" class="chart chart-line" height="40" width="100"></canvas>
+                      <canvas id="sparkline-chart-4" class="chart chart-line" height="40" width="100"></canvas>
                     </div>
                   </div>
                 </div>
@@ -673,7 +586,7 @@
                     <div class="text-muted small text-uppercase font-weight-bold">Title</div>
                     <div class="text-value-lg py-3">1,123</div>
                     <div class="chart-wrapper mx-auto" style="height:40px;width:80px">
-                      <canvas id="chart-5" class="chart chart-line" height="40" width="100"></canvas>
+                      <canvas id="sparkline-chart-5" class="chart chart-line" height="40" width="100"></canvas>
                     </div>
                   </div>
                 </div>
@@ -685,7 +598,7 @@
                     <div class="text-muted small text-uppercase font-weight-bold">Title</div>
                     <div class="text-value-lg py-3">1,123</div>
                     <div class="chart-wrapper mx-auto" style="height:40px;width:80px">
-                      <canvas id="chart-6" class="chart chart-line" height="40" width="100"></canvas>
+                      <canvas id="sparkline-chart-6" class="chart chart-line" height="40" width="100"></canvas>
                     </div>
                   </div>
                 </div>
@@ -1280,14 +1193,10 @@
         </ul>
         <!-- Tab panes-->
         <div class="tab-content">
-          <div class="tab-pane active" id="timeline" role="tabpanel">
-            <div class="callout m-0 py-2 text-muted text-center bg-light text-uppercase">
-              <small>
-                <b>Today</b>
-              </small>
-            </div>
-            <hr class="transparent mx-3 my-0">
-            <div class="callout callout-warning m-0 py-3">
+          <div class="tab-pane active" id="timeline" role="tabpanel"></div>
+          <div class="list-group list-group-accent">
+            <div class="list-group-item list-group-item-accent-secondary bg-light text-center font-weight-bold text-muted text-uppercase small">Today</div>
+            <div class="list-group-item list-group-item-accent-warning list-group-item-divider">
               <div class="avatar float-right">
                 <img class="img-avatar" src="img/avatars/7.jpg" alt="admin@bootstrapmaster.com">
               </div>
@@ -1299,8 +1208,7 @@
               <small class="text-muted">
                 <i class="icon-location-pin"></i>  Palo Alto, CA</small>
             </div>
-            <hr class="mx-3 my-0">
-            <div class="callout callout-info m-0 py-3">
+            <div class="list-group-item list-group-item-accent-info">
               <div class="avatar float-right">
                 <img class="img-avatar" src="img/avatars/4.jpg" alt="admin@bootstrapmaster.com">
               </div>
@@ -1312,14 +1220,8 @@
               <small class="text-muted">
                 <i class="icon-social-skype"></i>  On-line</small>
             </div>
-            <hr class="transparent mx-3 my-0">
-            <div class="callout m-0 py-2 text-muted text-center bg-light text-uppercase">
-              <small>
-                <b>Tomorrow</b>
-              </small>
-            </div>
-            <hr class="transparent mx-3 my-0">
-            <div class="callout callout-danger m-0 py-3">
+            <div class="list-group-item list-group-item-accent-secondary bg-light text-center font-weight-bold text-muted text-uppercase small">Tomorrow</div>
+            <div class="list-group-item list-group-item-accent-danger list-group-item-divider">
               <div>New UI Project -
                 <strong>deadline</strong>
               </div>
@@ -1345,8 +1247,7 @@
                 </div>
               </div>
             </div>
-            <hr class="mx-3 my-0">
-            <div class="callout callout-success m-0 py-3">
+            <div class="list-group-item list-group-item-accent-success list-group-item-divider">
               <div>
                 <strong>#10 Startups.Garden</strong> Meetup</div>
               <small class="text-muted mr-3">
@@ -1354,8 +1255,7 @@
               <small class="text-muted">
                 <i class="icon-location-pin"></i>  Palo Alto, CA</small>
             </div>
-            <hr class="mx-3 my-0">
-            <div class="callout callout-primary m-0 py-3">
+            <div class="list-group-item list-group-item-accent-primary list-group-item-divider">
               <div>
                 <strong>Team meeting</strong>
               </div>
@@ -1387,7 +1287,6 @@
                 </div>
               </div>
             </div>
-            <hr class="mx-3 my-0">
           </div>
           <div class="tab-pane p-3" id="messages" role="tabpanel">
             <div class="message">
@@ -1582,6 +1481,6 @@
     <script src="node_modules/@coreui/coreui/dist/js/coreui.min.js"></script>
     <script src="node_modules/chart.js/dist/Chart.min.js"></script>
     <script src="node_modules/@coreui/plugin-chartjs-custom-tooltips/dist/js/custom-tooltips.min.js"></script>
-    <script src="js/views/widgets.js"></script>
+    <script src="js/widgets.js"></script>
   </body>
 </html>
